2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* TODO (5.1): Move ``Hardware watchpint problems'' out of 5.1.

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS (paper trail): Update.

2001-02-16  Mark Kettenis  <kettenis@gnu.org>

	* target.h (target_fetch_registers): Fix comment.

2001-02-15  Andrew Cagney  <ac131313@redhat.com>

	* f-exp.y: Include <ctype.h>.
	(parse_number): Ensure that ``i'' is always initialized.

2001-02-14  Jim Kingdon  <jkingdon@engr.sgi.com>

	* MAINTAINERS: Add myself to paper trail section.

2001-02-14  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* configure.in (AC_CHECK_HEADERS): Add sys/file.h.
	* configure, config.in: Regenerate.
	* corelow.c: Include <sys/file.h> if present.

2001-02-14  Andrew Cagney  <ac131313@redhat.com>

	* inflow.c (terminal_ours_1): Initialize ``osigtou''.  Only
 	declare when have SIGTTOU.

2001-02-14  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/fnchange.lst: Add entries for gdb/gdbtk/*/ChangeLog-*.

2001-02-12  Jim Kingdon  <jkingdon@engr.sgi.com>

	* MAINTAINERS: Update my email address.

2001-02-11  Eli Zaretskii  <eliz@is.elta.co.il>

	* NEWS: Document that "info symbol" works with COFF debug info and
	its variants.

	* minsyms.c (lookup_minimal_symbol_by_pc_section): Don't skip
	symbols whose SYMBOL_BFD_SECTION is NULL.

2000-02-10  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	Get rid of AIX specific PC_LOAD_SEGMENT, replace with PC_SOLIB.
	* xcoffsolib.c (xcoff_solib_address):  Renamed from
	pc_load_segment_name.  Return NULL if address is not in a shared
	library.  Cleanup shared library name construction, using xasprintf.
	Format shared library member names consistent with format in exec.c.
	(solib_info):  Format shared library member names consistent with
	format in exec.c.
	* config/rs6000/nm-rs6000.h:  Replace PC_LOAD_SEGMENT with PC_SOLIB,
	using xcoff_solib_address for PC_SOLIB definition.
	* stack.c (print_frame):  Remove PC_LOAD_SEGMENT code, no longer